[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Networking/PublicLobbySelector.gd" type="Script" id=1]
[ext_resource path="res://Art/UI/hover.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Networking/PublicLobbyData.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonHover.tres" type="StyleBox" id=5]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonPressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Art/UI/refresh.png" type="Texture" id=7]
[ext_resource path="res://Art/UI/close.png" type="Texture" id=8]

[node name="PublicLobbySelector" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 2 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar" type="Control" parent="VBoxContainer"]
margin_right = 40.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="RefreshButton" type="Button" parent="VBoxContainer/Toolbar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Toolbar/RefreshButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 7 )

[node name="CloseButton" type="Button" parent="VBoxContainer/Toolbar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Toolbar/CloseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 8 )

[node name="PublicLobbyData" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 40.0
margin_bottom = 32.0

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 40.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 24 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 40.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Toolbar/RefreshButton" to="." method="onRefreshPressed"]
[connection signal="pressed" from="VBoxContainer/Toolbar/CloseButton" to="." method="onClosePressed"]
